@@ -8,11 +8,9 @@
 
 package org.elasticsearch.painless.lookup;
 
-import org.elasticsearch.bootstrap.BootstrapInfo;
 import org.elasticsearch.common.util.Maps;
+import org.elasticsearch.core.Strings;
 import org.elasticsearch.painless.Def;
-import org.elasticsearch.painless.MethodWriter;
-import org.elasticsearch.painless.WriterConstants;
 import org.elasticsearch.painless.spi.Whitelist;
 import org.elasticsearch.painless.spi.WhitelistClass;
 import org.elasticsearch.painless.spi.WhitelistClassBinding;
@@ -20,49 +18,34 @@ import org.elasticsearch.painless.spi.WhitelistConstructor;
 import org.elasticsearch.painless.spi.WhitelistField;
 import org.elasticsearch.painless.spi.WhitelistInstanceBinding;
 import org.elasticsearch.painless.spi.WhitelistMethod;
+import org.elasticsearch.painless.spi.annotation.AliasAnnotation;
 import org.elasticsearch.painless.spi.annotation.AugmentedAnnotation;
 import org.elasticsearch.painless.spi.annotation.CompileTimeOnlyAnnotation;
 import org.elasticsearch.painless.spi.annotation.InjectConstantAnnotation;
 import org.elasticsearch.painless.spi.annotation.NoImportAnnotation;
-import org.objectweb.asm.ClassWriter;
-import org.objectweb.asm.Opcodes;
-import org.objectweb.asm.commons.GeneratorAdapter;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodHandles.Lookup;
 import java.lang.invoke.MethodType;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.security.AccessController;
-import java.security.CodeSource;
-import java.security.PrivilegedAction;
-import java.security.SecureClassLoader;
-import java.security.cert.Certificate;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.regex.Pattern;
 
-import static org.elasticsearch.painless.WriterConstants.DEF_TO_B_BYTE_IMPLICIT;
-import static org.elasticsearch.painless.WriterConstants.DEF_TO_B_CHARACTER_IMPLICIT;
-import static org.elasticsearch.painless.WriterConstants.DEF_TO_B_DOUBLE_IMPLICIT;
-import static org.elasticsearch.painless.WriterConstants.DEF_TO_B_FLOAT_IMPLICIT;
-import static org.elasticsearch.painless.WriterConstants.DEF_TO_B_INTEGER_IMPLICIT;
-import static org.elasticsearch.painless.WriterConstants.DEF_TO_B_LONG_IMPLICIT;
-import static org.elasticsearch.painless.WriterConstants.DEF_TO_B_SHORT_IMPLICIT;
-import static org.elasticsearch.painless.WriterConstants.DEF_UTIL_TYPE;
-import static org.elasticsearch.painless.WriterConstants.OBJECT_TYPE;
 import static org.elasticsearch.painless.lookup.PainlessLookupUtility.DEF_CLASS_NAME;
 import static org.elasticsearch.painless.lookup.PainlessLookupUtility.buildPainlessConstructorKey;
 import static org.elasticsearch.painless.lookup.PainlessLookupUtility.buildPainlessFieldKey;
@@ -73,41 +56,16 @@ import static org.elasticsearch.painless.lookup.PainlessLookupUtility.typesToCan
 
 public final class PainlessLookupBuilder {
 
-    private static final class BridgeLoader extends SecureClassLoader {
-        BridgeLoader(ClassLoader parent) {
-            super(parent);
-        }
-
-        @Override
-        public Class<?> findClass(String name) throws ClassNotFoundException {
-            return Def.class.getName().equals(name) ? Def.class : super.findClass(name);
-        }
-
-        Class<?> defineBridge(String name, byte[] bytes) {
-            return defineClass(name, bytes, 0, bytes.length, CODESOURCE);
-        }
-    }
-
-    private static final CodeSource CODESOURCE;
-
     private static final Map<PainlessConstructor, PainlessConstructor> painlessConstructorCache = new HashMap<>();
     private static final Map<PainlessMethod, PainlessMethod> painlessMethodCache = new HashMap<>();
     private static final Map<PainlessField, PainlessField> painlessFieldCache = new HashMap<>();
     private static final Map<PainlessClassBinding, PainlessClassBinding> painlessClassBindingCache = new HashMap<>();
     private static final Map<PainlessInstanceBinding, PainlessInstanceBinding> painlessInstanceBindingCache = new HashMap<>();
-    private static final Map<PainlessMethod, PainlessMethod> painlessBridgeCache = new HashMap<>();
+    private static final Map<PainlessMethod, PainlessMethod> painlessFilteredCache = new HashMap<>();
 
     private static final Pattern CLASS_NAME_PATTERN = Pattern.compile("^[_a-zA-Z][._a-zA-Z0-9]*$");
     private static final Pattern METHOD_NAME_PATTERN = Pattern.compile("^[_a-zA-Z][_a-zA-Z0-9]*$");
     private static final Pattern FIELD_NAME_PATTERN = Pattern.compile("^[_a-zA-Z][_a-zA-Z0-9]*$");
-
-    static {
-        try {
-            CODESOURCE = new CodeSource(new URL("file:" + BootstrapInfo.UNTRUSTED_CODEBASE), (Certificate[]) null);
-        } catch (MalformedURLException mue) {
-            throw new RuntimeException(mue);
-        }
-    }
 
     public static PainlessLookup buildFromWhitelists(List<Whitelist> whitelists) {
         PainlessLookupBuilder painlessLookupBuilder = new PainlessLookupBuilder();
@@ -260,6 +218,26 @@ public final class PainlessLookupBuilder {
         }
     }
 
+    /**
+     * Returns a lookup with the capability of looking up members in the target
+     * class.
+     *
+     * <p> If the target class is in the same module as this module, then the
+     * returned lookup has this class as its lookup class and holds the
+     * {@link Lookup#MODULE} mode. If the target class is not in this module,
+     * then the returned lookup has the target class as its lookup class and
+     * holds the {@link Lookup#UNCONDITIONAL} mode.
+     */
+    private static Lookup lookup(Class<?> targetClass) {
+        if (targetClass.getModule() == PainlessLookupBuilder.class.getModule()) {
+            var l = MethodHandles.lookup().dropLookupMode(Lookup.PACKAGE);
+            assert l.lookupModes() == (Lookup.PUBLIC | Lookup.MODULE) : "lookup modes:" + Integer.toHexString(l.lookupModes());
+            return l;
+        } else {
+            return MethodHandles.publicLookup().in(targetClass);
+        }
+    }
+
     public void addPainlessClass(ClassLoader classLoader, String javaClassName, Map<Class<?>, Object> annotations) {
 
         Objects.requireNonNull(classLoader);
@@ -281,6 +259,14 @@ public final class PainlessLookupBuilder {
         }
 
         addPainlessClass(clazz, annotations);
+    }
+
+    private static IllegalArgumentException lookupException(String formatText, Object... args) {
+        return new IllegalArgumentException(Strings.format(formatText, args));
+    }
+
+    private static IllegalArgumentException lookupException(Throwable cause, String formatText, Object... args) {
+        return new IllegalArgumentException(Strings.format(formatText, args), cause);
     }
 
     public void addPainlessClass(Class<?> clazz, Map<Class<?>, Object> annotations) {
@@ -306,22 +292,18 @@ public final class PainlessLookupBuilder {
         if (existingClass == null) {
             javaClassNamesToClasses.put(clazz.getName().intern(), clazz);
         } else if (existingClass != clazz) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + canonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                canonicalClassName
             );
         }
 
         existingClass = canonicalClassNamesToClasses.get(canonicalClassName);
 
         if (existingClass != null && existingClass != clazz) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + canonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                canonicalClassName
             );
         }
 
@@ -353,17 +335,19 @@ public final class PainlessLookupBuilder {
                     }
 
                     canonicalClassNamesToClasses.put(importedCanonicalClassName.intern(), clazz);
+                    if (annotations.get(AliasAnnotation.class) instanceof AliasAnnotation alias) {
+                        Class<?> existing = canonicalClassNamesToClasses.put(alias.alias(), clazz);
+                        if (existing != null) {
+                            throw lookupException("Cannot add alias [%s] for [%s] that shadows class [%s]", alias.alias(), clazz, existing);
+                        }
+                    }
                 }
             } else if (importedClass != clazz) {
-                throw new IllegalArgumentException(
-                    "imported class ["
-                        + importedCanonicalClassName
-                        + "] cannot represent multiple "
-                        + "classes ["
-                        + canonicalClassName
-                        + "] and ["
-                        + typeToCanonicalTypeName(importedClass)
-                        + "]"
+                throw lookupException(
+                    "imported class [%s] cannot represent multiple classes [%s] and [%s]",
+                    importedCanonicalClassName,
+                    canonicalClassName,
+                    typeToCanonicalTypeName(importedClass)
                 );
             } else if (importClassName == false) {
                 throw new IllegalArgumentException("inconsistent no_import parameter found for class [" + canonicalClassName + "]");
@@ -382,15 +366,11 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found"
-                    + "for constructor [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "target class [%s] not found for constructor [[%s], %s]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -400,15 +380,11 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found "
-                        + "for constructor [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for constructor [[%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -430,15 +406,11 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found"
-                    + "for constructor [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "target class [%s] not found for constructor [[%s], %s]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -447,15 +419,11 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for constructor [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for constructor [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
@@ -465,32 +433,26 @@ public final class PainlessLookupBuilder {
         Constructor<?> javaConstructor;
 
         try {
-            javaConstructor = targetClass.getConstructor(javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
+            javaConstructor = targetClass.getConstructor(javaTypeParameters.toArray(Class<?>[]::new));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "reflection object not found for constructor "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]",
-                nsme
+            throw lookupException(
+                nsme,
+                "reflection object not found for constructor [[%s], %s]",
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         MethodHandle methodHandle;
 
         try {
-            methodHandle = MethodHandles.publicLookup().in(targetClass).unreflectConstructor(javaConstructor);
+            methodHandle = lookup(targetClass).unreflectConstructor(javaConstructor);
         } catch (IllegalAccessException iae) {
-            throw new IllegalArgumentException(
-                "method handle not found for constructor "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]",
-                iae
+            throw lookupException(
+                iae,
+                "method handle not found for constructor [[%s], %s]",
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -511,21 +473,15 @@ public final class PainlessLookupBuilder {
         );
 
         if (existingPainlessConstructor == null) {
-            newPainlessConstructor = painlessConstructorCache.computeIfAbsent(newPainlessConstructor, key -> key);
+            newPainlessConstructor = painlessConstructorCache.computeIfAbsent(newPainlessConstructor, Function.identity());
             painlessClassBuilder.constructors.put(painlessConstructorKey.intern(), newPainlessConstructor);
         } else if (newPainlessConstructor.equals(existingPainlessConstructor) == false) {
-            throw new IllegalArgumentException(
-                "cannot add constructors with the same arity but are not equivalent for constructors "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessConstructor.typeParameters())
-                    + "]"
+            throw lookupException(
+                "cannot add constructors with the same arity but are not equivalent for constructors [[%s], %s] and [[%s], %s]",
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName,
+                typesToCanonicalTypeNames(existingPainlessConstructor.typeParameters())
             );
         }
     }
@@ -550,17 +506,12 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "target class [%s] not found for method [[%s], [%s], %s]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -570,16 +521,13 @@ public final class PainlessLookupBuilder {
             augmentedClass = loadClass(
                 classLoader,
                 augmentedCanonicalClassName,
-                () -> "augmented class ["
-                    + augmentedCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+                () -> Strings.format(
+                    "augmented class [%s] not found for method [[%s], [%s], %s]",
+                    augmentedCanonicalClassName,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
+                )
             );
         }
 
@@ -589,17 +537,12 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for method [[%s], [%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -609,17 +552,12 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for method [[%s], [%s], %s]",
+                returnCanonicalTypeName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -656,17 +594,12 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "target class [%s] not found for method [[%s], [%s], %s]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -680,17 +613,12 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for method [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for method [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
@@ -698,17 +626,12 @@ public final class PainlessLookupBuilder {
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType),
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -716,59 +639,45 @@ public final class PainlessLookupBuilder {
 
         if (augmentedClass == null) {
             try {
-                javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
+                javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(Class<?>[]::new));
             } catch (NoSuchMethodException nsme) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for method [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + "["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]",
-                    nsme
+                throw lookupException(
+                    nsme,
+                    "reflection object not found for method [[%s], [%s], %s]",
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
         } else {
             try {
-                javaMethod = augmentedClass.getMethod(methodName, javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
+                javaMethod = augmentedClass.getMethod(methodName, javaTypeParameters.toArray(Class<?>[]::new));
 
                 if (Modifier.isStatic(javaMethod.getModifiers()) == false) {
-                    throw new IllegalArgumentException(
-                        "method [["
-                            + targetCanonicalClassName
-                            + "], ["
-                            + methodName
-                            + "], "
-                            + typesToCanonicalTypeNames(typeParameters)
-                            + "] with augmented class "
-                            + "["
-                            + typeToCanonicalTypeName(augmentedClass)
-                            + "] must be static"
+                    throw lookupException(
+                        "method [[%s], [%s], %s] with augmented class [%s] must be static",
+                        targetCanonicalClassName,
+                        methodName,
+                        typesToCanonicalTypeNames(typeParameters),
+                        typeToCanonicalTypeName(augmentedClass)
                     );
                 }
             } catch (NoSuchMethodException nsme) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "] "
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    nsme
+                throw lookupException(
+                    nsme,
+                    "reflection object not found for method [[%s], [%s], %s] with augmented class [%s]",
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters),
+                    typeToCanonicalTypeName(augmentedClass)
                 );
             }
         }
 
         // injections alter the type parameters required for the user to call this method, since some are injected by compiler
-        if (annotations.containsKey(InjectConstantAnnotation.class)) {
-            int numInjections = ((InjectConstantAnnotation) annotations.get(InjectConstantAnnotation.class)).injects().size();
+        InjectConstantAnnotation inject = (InjectConstantAnnotation) annotations.get(InjectConstantAnnotation.class);
+        if (inject != null) {
+            int numInjections = inject.injects().size();
 
             if (numInjections > 0) {
                 typeParameters.subList(0, numInjections).clear();
@@ -778,20 +687,13 @@ public final class PainlessLookupBuilder {
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()),
+                typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -799,37 +701,28 @@ public final class PainlessLookupBuilder {
 
         if (augmentedClass == null) {
             try {
-                methodHandle = MethodHandles.publicLookup().in(targetClass).unreflect(javaMethod);
+                methodHandle = lookup(targetClass).unreflect(javaMethod);
             } catch (IllegalAccessException iae) {
-                throw new IllegalArgumentException(
-                    "method handle not found for method "
-                        + "[["
-                        + targetClass.getCanonicalName()
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]",
-                    iae
+                throw lookupException(
+                    iae,
+                    "method handle not found for method [[%s], [%s], %s], with lookup [%s]",
+                    targetClass.getCanonicalName(),
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters),
+                    lookup(targetClass)
                 );
             }
         } else {
             try {
-                methodHandle = MethodHandles.publicLookup().in(augmentedClass).unreflect(javaMethod);
+                methodHandle = lookup(augmentedClass).unreflect(javaMethod);
             } catch (IllegalAccessException iae) {
-                throw new IllegalArgumentException(
-                    "method handle not found for method "
-                        + "[["
-                        + targetClass.getCanonicalName()
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    iae
+                throw lookupException(
+                    iae,
+                    "method handle not found for method [[%s], [%s], %s] with augmented class [%s]",
+                    targetClass.getCanonicalName(),
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters),
+                    typeToCanonicalTypeName(augmentedClass)
                 );
             }
         }
@@ -863,28 +756,17 @@ public final class PainlessLookupBuilder {
                 painlessClassBuilder.methods.put(painlessMethodKey.intern(), newPainlessMethod);
             }
         } else if (newPainlessMethod.equals(existingPainlessMethod) == false) {
-            throw new IllegalArgumentException(
+            throw lookupException(
                 "cannot add methods with the same name and arity but are not equivalent for methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessMethod.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessMethod.typeParameters())
-                    + "]"
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(returnType),
+                typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(existingPainlessMethod.returnType()),
+                typesToCanonicalTypeNames(existingPainlessMethod.typeParameters())
             );
         }
     }
@@ -906,17 +788,12 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + canonicalTypeNameParameter
-                    + "]]"
+            throw lookupException(
+                "target class [%s] not found for field [[%s], [%s], [%s]]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                fieldName,
+                canonicalTypeNameParameter
             );
         }
 
@@ -930,29 +807,23 @@ public final class PainlessLookupBuilder {
             augmentedClass = loadClass(
                 classLoader,
                 augmentedCanonicalClassName,
-                () -> "augmented class ["
-                    + augmentedCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
+                () -> Strings.format(
+                    "augmented class [%s] not found for field [[%s], [%s]]",
+                    augmentedCanonicalClassName,
+                    targetCanonicalClassName,
+                    fieldName
+                )
             );
         }
 
         Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
         if (typeParameter == null) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + canonicalTypeNameParameter
-                    + "] not found "
-                    + "for field [["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
+            throw lookupException(
+                "type parameter [%s] not found for field [[%s], [%s]]",
+                canonicalTypeNameParameter,
+                targetCanonicalClassName,
+                fieldName
             );
         }
 
@@ -987,32 +858,22 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "]]"
+            throw lookupException(
+                "target class [%s] not found for field [[%s], [%s], [%s]]",
+                targetCanonicalClassName,
+                targetCanonicalClassName,
+                fieldName,
+                typeToCanonicalTypeName(typeParameter)
             );
         }
 
         if (isValidType(typeParameter) == false) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "]]"
+            throw lookupException(
+                "type parameter [%s] not found for field [[%s], [%s], [%s]]",
+                typeToCanonicalTypeName(typeParameter),
+                targetCanonicalClassName,
+                fieldName,
+                typeToCanonicalTypeName(typeParameter)
             );
         }
 
@@ -1022,16 +883,12 @@ public final class PainlessLookupBuilder {
             try {
                 javaField = targetClass.getField(fieldName);
             } catch (NoSuchFieldException nsfe) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for field "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "]]",
-                    nsfe
+                throw lookupException(
+                    nsfe,
+                    "reflection object not found for field [[%s], [%s], [%s]]",
+                    targetCanonicalClassName,
+                    fieldName,
+                    typeToCanonicalTypeName(typeParameter)
                 );
             }
         } else {
@@ -1039,48 +896,32 @@ public final class PainlessLookupBuilder {
                 javaField = augmentedClass.getField(fieldName);
 
                 if (Modifier.isStatic(javaField.getModifiers()) == false || Modifier.isFinal(javaField.getModifiers()) == false) {
-                    throw new IllegalArgumentException(
-                        "field [["
-                            + targetCanonicalClassName
-                            + "], ["
-                            + fieldName
-                            + "] "
-                            + "with augmented class ["
-                            + typeToCanonicalTypeName(augmentedClass)
-                            + "] must be static and final"
+                    throw lookupException(
+                        "field [[%s], [%s]] with augmented class [%s] must be static and final",
+                        targetCanonicalClassName,
+                        fieldName,
+                        typeToCanonicalTypeName(augmentedClass)
                     );
                 }
             } catch (NoSuchFieldException nsfe) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for field "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "]]"
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    nsfe
+                throw lookupException(
+                    nsfe,
+                    "reflection object not found for field [[%s], [%s], [%s]] with augmented class [%s]",
+                    targetCanonicalClassName,
+                    fieldName,
+                    typeToCanonicalTypeName(typeParameter),
+                    typeToCanonicalTypeName(augmentedClass)
                 );
             }
         }
 
         if (javaField.getType() != typeToJavaType(typeParameter)) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + typeToCanonicalTypeName(javaField.getType())
-                    + "] "
-                    + "does not match the specified type parameter ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "] "
-                    + "for field [["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
+            throw lookupException(
+                "type parameter [%s] does not match the specified type parameter [%s] for field [[%s], [%s]]",
+                typeToCanonicalTypeName(javaField.getType()),
+                typeToCanonicalTypeName(typeParameter),
+                targetCanonicalClassName,
+                fieldName
             );
         }
 
@@ -1105,26 +946,18 @@ public final class PainlessLookupBuilder {
             PainlessField newPainlessField = new PainlessField(javaField, typeParameter, annotations, methodHandleGetter, null);
 
             if (existingPainlessField == null) {
-                newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, key -> key);
+                newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, Function.identity());
                 painlessClassBuilder.staticFields.put(painlessFieldKey.intern(), newPainlessField);
             } else if (newPainlessField.equals(existingPainlessField) == false) {
-                throw new IllegalArgumentException(
-                    "cannot add fields with the same name but are not equivalent for fields "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] and "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + existingPainlessField.javaField().getName()
-                        + "], "
-                        + typeToCanonicalTypeName(existingPainlessField.typeParameter())
-                        + "] "
-                        + "with the same name and different type parameters"
+                throw lookupException(
+                    "cannot add fields with the same name but are not equivalent for fields [[%s], [%s], [%s]] and [[%s], [%s], [%s]]"
+                        + " with the same name and different type parameters",
+                    targetCanonicalClassName,
+                    fieldName,
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    existingPainlessField.javaField().getName(),
+                    typeToCanonicalTypeName(existingPainlessField.typeParameter())
                 );
             }
         } else {
@@ -1151,23 +984,15 @@ public final class PainlessLookupBuilder {
                 newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, key -> key);
                 painlessClassBuilder.fields.put(painlessFieldKey.intern(), newPainlessField);
             } else if (newPainlessField.equals(existingPainlessField) == false) {
-                throw new IllegalArgumentException(
-                    "cannot add fields with the same name but are not equivalent for fields "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] and "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + existingPainlessField.javaField().getName()
-                        + "], "
-                        + typeToCanonicalTypeName(existingPainlessField.typeParameter())
-                        + "] "
-                        + "with the same name and different type parameters"
+                throw lookupException(
+                    "cannot add fields with the same name but are not equivalent for fields [[%s], [%s], [%s]] and [[%s], [%s], [%s]]"
+                        + " with the same name and different type parameters",
+                    targetCanonicalClassName,
+                    fieldName,
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    existingPainlessField.javaField().getName(),
+                    typeToCanonicalTypeName(existingPainlessField.typeParameter())
                 );
             }
         }
@@ -1191,38 +1016,18 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = loadClass(classLoader, targetJavaClassName, () -> "class [" + targetJavaClassName + "] not found");
         String targetCanonicalClassName = typeToCanonicalTypeName(targetClass);
 
-        if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
-        }
-
         List<Class<?>> typeParameters = new ArrayList<>(canonicalTypeNameParameters.size());
 
         for (String canonicalTypeNameParameter : canonicalTypeNameParameters) {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for imported method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for imported method [[%s], [%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -1232,17 +1037,12 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                returnCanonicalTypeName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -1271,11 +1071,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName
             );
         }
 
@@ -1290,17 +1088,12 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for imported method [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for imported method [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
@@ -1308,17 +1101,12 @@ public final class PainlessLookupBuilder {
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType),
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1327,46 +1115,32 @@ public final class PainlessLookupBuilder {
         try {
             javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "imported method reflection object [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                nsme
+            throw lookupException(
+                nsme,
+                "imported method reflection object [[%s], [%s], %s] not found",
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for imported method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()),
+                typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers()) == false) {
-            throw new IllegalArgumentException(
-                "imported method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] must be static"
+            throw lookupException(
+                "imported method [[%s], [%s], %s] must be static",
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1383,18 +1157,14 @@ public final class PainlessLookupBuilder {
         MethodHandle methodHandle;
 
         try {
-            methodHandle = MethodHandles.publicLookup().in(targetClass).unreflect(javaMethod);
+            methodHandle = lookup(targetClass).unreflect(javaMethod);
         } catch (IllegalAccessException iae) {
-            throw new IllegalArgumentException(
-                "imported method handle [["
-                    + targetClass.getCanonicalName()
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                iae
+            throw lookupException(
+                iae,
+                "imported method handle [[%s], [%s], %s] not found",
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1415,29 +1185,17 @@ public final class PainlessLookupBuilder {
             newImportedPainlessMethod = painlessMethodCache.computeIfAbsent(newImportedPainlessMethod, key -> key);
             painlessMethodKeysToImportedPainlessMethods.put(painlessMethodKey.intern(), newImportedPainlessMethod);
         } else if (newImportedPainlessMethod.equals(existingImportedPainlessMethod) == false) {
-            throw new IllegalArgumentException(
-                "cannot add imported methods with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingImportedPainlessMethod.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingImportedPainlessMethod.typeParameters())
-                    + "]"
+            throw lookupException(
+                "cannot add imported methods with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(returnType),
+                typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(existingImportedPainlessMethod.returnType()),
+                typesToCanonicalTypeNames(existingImportedPainlessMethod.typeParameters())
             );
         }
     }
@@ -1465,17 +1223,12 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for class binding "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], [%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -1485,17 +1238,12 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                returnCanonicalTypeName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -1524,11 +1272,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName
             );
         }
 
@@ -1551,52 +1297,38 @@ public final class PainlessLookupBuilder {
             throw new IllegalArgumentException("class binding [" + targetCanonicalClassName + "] must have exactly one constructor");
         }
 
-        int constructorTypeParametersSize = javaConstructor.getParameterCount();
+        Class<?>[] constructorParameterTypes = javaConstructor.getParameterTypes();
 
-        for (int typeParameterIndex = 0; typeParameterIndex < constructorTypeParametersSize; ++typeParameterIndex) {
+        for (int typeParameterIndex = 0; typeParameterIndex < constructorParameterTypes.length; ++typeParameterIndex) {
             Class<?> typeParameter = typeParameters.get(typeParameterIndex);
 
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
-            Class<?> javaTypeParameter = javaConstructor.getParameterTypes()[typeParameterIndex];
+            Class<?> javaTypeParameter = constructorParameterTypes[typeParameterIndex];
 
             if (isValidType(javaTypeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
             if (javaTypeParameter != typeToJavaType(typeParameter)) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(javaTypeParameter)
-                        + "] "
-                        + "does not match the specified type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "for class binding [["
-                        + targetClass.getCanonicalName()
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] does not match the specified type parameter [%s] for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(javaTypeParameter),
+                    typeToCanonicalTypeName(typeParameter),
+                    targetClass.getCanonicalName(),
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
         }
@@ -1628,90 +1360,64 @@ public final class PainlessLookupBuilder {
             throw new IllegalArgumentException("class binding [" + targetCanonicalClassName + "] must have exactly one method");
         }
 
-        int methodTypeParametersSize = javaMethod.getParameterCount();
+        Class<?>[] methodParameterTypes = javaMethod.getParameterTypes();
 
-        for (int typeParameterIndex = 0; typeParameterIndex < methodTypeParametersSize; ++typeParameterIndex) {
-            Class<?> typeParameter = typeParameters.get(constructorTypeParametersSize + typeParameterIndex);
+        for (int typeParameterIndex = 0; typeParameterIndex < methodParameterTypes.length; ++typeParameterIndex) {
+            Class<?> typeParameter = typeParameters.get(constructorParameterTypes.length + typeParameterIndex);
 
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
             Class<?> javaTypeParameter = javaMethod.getParameterTypes()[typeParameterIndex];
 
             if (isValidType(javaTypeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
             if (javaTypeParameter != typeToJavaType(typeParameter)) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(javaTypeParameter)
-                        + "] "
-                        + "does not match the specified type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "for class binding [["
-                        + targetClass.getCanonicalName()
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] does not match the specified type parameter [%s] for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(javaTypeParameter),
+                    typeToCanonicalTypeName(typeParameter),
+                    targetClass.getCanonicalName(),
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType),
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for class binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for class binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()),
+                typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
-        String painlessMethodKey = buildPainlessMethodKey(methodName, constructorTypeParametersSize + methodTypeParametersSize);
+        String painlessMethodKey = buildPainlessMethodKey(methodName, constructorParameterTypes.length + methodParameterTypes.length);
 
         if (painlessMethodKeysToImportedPainlessMethods.containsKey(painlessMethodKey)) {
             throw new IllegalArgumentException("class binding and imported method cannot have the same name [" + methodName + "]");
@@ -1722,14 +1428,11 @@ public final class PainlessLookupBuilder {
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers())) {
-            throw new IllegalArgumentException(
-                "class binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] cannot be static"
+            throw lookupException(
+                "class binding [[%s], [%s], %s] cannot be static",
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1743,34 +1446,20 @@ public final class PainlessLookupBuilder {
         );
 
         if (existingPainlessClassBinding == null) {
-            newPainlessClassBinding = painlessClassBindingCache.computeIfAbsent(newPainlessClassBinding, key -> key);
+            newPainlessClassBinding = painlessClassBindingCache.computeIfAbsent(newPainlessClassBinding, Function.identity());
             painlessMethodKeysToPainlessClassBindings.put(painlessMethodKey.intern(), newPainlessClassBinding);
         } else if (newPainlessClassBinding.equals(existingPainlessClassBinding) == false) {
-            throw new IllegalArgumentException(
-                "cannot add class bindings with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessClassBinding.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessClassBinding.typeParameters())
-                    + "]"
+            throw lookupException(
+                "cannot add class bindings with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(returnType),
+                typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(existingPainlessClassBinding.returnType()),
+                typesToCanonicalTypeNames(existingPainlessClassBinding.typeParameters())
             );
         }
     }
@@ -1796,17 +1485,12 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for instance binding "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for instance binding [[%s], [%s], %s]",
+                    canonicalTypeNameParameter,
+                    targetCanonicalClassName,
+                    methodName,
+                    canonicalTypeNameParameters
                 );
             }
 
@@ -1816,17 +1500,12 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                returnCanonicalTypeName,
+                targetCanonicalClassName,
+                methodName,
+                canonicalTypeNameParameters
             );
         }
 
@@ -1857,11 +1536,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName
             );
         }
 
@@ -1876,17 +1553,12 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for instance binding [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
+                throw lookupException(
+                    "type parameter [%s] not found for instance binding [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName,
+                    methodName,
+                    typesToCanonicalTypeNames(typeParameters)
                 );
             }
 
@@ -1894,17 +1566,12 @@ public final class PainlessLookupBuilder {
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType),
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1913,46 +1580,32 @@ public final class PainlessLookupBuilder {
         try {
             javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "instance binding reflection object [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                nsme
+            throw lookupException(
+                nsme,
+                "instance binding reflection object [[%s], [%s], %s] not found",
+                targetCanonicalClassName,
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for instance binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for instance binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()),
+                typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers())) {
-            throw new IllegalArgumentException(
-                "instance binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] cannot be static"
+            throw lookupException(
+                "instance binding [[%s], [%s], %s] cannot be static",
+                targetClass.getCanonicalName(),
+                methodName,
+                typesToCanonicalTypeNames(typeParameters)
             );
         }
 
@@ -1979,34 +1632,19 @@ public final class PainlessLookupBuilder {
             newPainlessInstanceBinding = painlessInstanceBindingCache.computeIfAbsent(newPainlessInstanceBinding, key -> key);
             painlessMethodKeysToPainlessInstanceBindings.put(painlessMethodKey.intern(), newPainlessInstanceBinding);
         } else if (newPainlessInstanceBinding.equals(existingPainlessInstanceBinding) == false) {
-            throw new IllegalArgumentException(
-                "cannot add instances bindings with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "], "
-                    + painlessAnnotations
-                    + " and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessInstanceBinding.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessInstanceBinding.typeParameters())
-                    + "], "
-                    + existingPainlessInstanceBinding.annotations()
+            throw lookupException(
+                "cannot add instances bindings with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s], %s and [[%s], [%s], [%s], %s], %s",
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(returnType),
+                typesToCanonicalTypeNames(typeParameters),
+                painlessAnnotations,
+                targetCanonicalClassName,
+                methodName,
+                typeToCanonicalTypeName(existingPainlessInstanceBinding.returnType()),
+                typesToCanonicalTypeNames(existingPainlessInstanceBinding.typeParameters()),
+                existingPainlessInstanceBinding.annotations()
             );
         }
     }
@@ -2025,20 +1663,20 @@ public final class PainlessLookupBuilder {
 
         if (javaClassNamesToClasses.values().containsAll(canonicalClassNamesToClasses.values()) == false) {
             throw new IllegalArgumentException(
-                "the values of java class names to classes " + "must be a superset of the values of canonical class names to classes"
+                "the values of java class names to classes must be a superset of the values of canonical class names to classes"
             );
         }
 
         if (javaClassNamesToClasses.values().containsAll(classesToPainlessClasses.keySet()) == false) {
             throw new IllegalArgumentException(
-                "the values of java class names to classes " + "must be a superset of the keys of classes to painless classes"
+                "the values of java class names to classes must be a superset of the keys of classes to painless classes"
             );
         }
 
         if (canonicalClassNamesToClasses.values().containsAll(classesToPainlessClasses.keySet()) == false
             || classesToPainlessClasses.keySet().containsAll(canonicalClassNamesToClasses.values()) == false) {
             throw new IllegalArgumentException(
-                "the values of canonical class names to classes " + "must have the same classes as the keys of classes to painless classes"
+                "the values of canonical class names to classes must have the same classes as the keys of classes to painless classes"
             );
         }
 
@@ -2059,7 +1697,7 @@ public final class PainlessLookupBuilder {
         }
 
         for (Class<?> subClass : classesToPainlessClassBuilders.keySet()) {
-            List<Class<?>> superInterfaces = new ArrayList<>(Arrays.asList(subClass.getInterfaces()));
+            Deque<Class<?>> superInterfaces = new ArrayDeque<>(Arrays.asList(subClass.getInterfaces()));
 
             // we check for Object.class as part of the allow listed classes because
             // it is possible for the compiler to work without Object
@@ -2098,7 +1736,7 @@ public final class PainlessLookupBuilder {
             Set<Class<?>> resolvedInterfaces = new HashSet<>();
 
             while (superInterfaces.isEmpty() == false) {
-                Class<?> superInterface = superInterfaces.remove(0);
+                Class<?> superInterface = superInterfaces.removeFirst();
 
                 if (resolvedInterfaces.add(superInterface)) {
                     if (classesToPainlessClassBuilders.containsKey(superInterface)) {
@@ -2112,9 +1750,7 @@ public final class PainlessLookupBuilder {
     }
 
     private void setFunctionalInterfaceMethods() {
-        for (Map.Entry<Class<?>, PainlessClassBuilder> painlessClassBuilderEntry : classesToPainlessClassBuilders.entrySet()) {
-            setFunctionalInterfaceMethod(painlessClassBuilderEntry.getKey(), painlessClassBuilderEntry.getValue());
-        }
+        classesToPainlessClassBuilders.forEach(this::setFunctionalInterfaceMethod);
     }
 
     private void setFunctionalInterfaceMethod(Class<?> targetClass, PainlessClassBuilder targetPainlessClassBuilder) {
@@ -2132,24 +1768,22 @@ public final class PainlessLookupBuilder {
             }
 
             if (javaMethods.size() != 1 && targetClass.isAnnotationPresent(FunctionalInterface.class)) {
-                throw new IllegalArgumentException(
-                    "class ["
-                        + typeToCanonicalTypeName(targetClass)
-                        + "] "
-                        + "is illegally marked as a FunctionalInterface with java methods "
-                        + javaMethods
+                throw lookupException(
+                    "class [%s] is illegally marked as a FunctionalInterface with java methods %s",
+                    typeToCanonicalTypeName(targetClass),
+                    javaMethods
                 );
             } else if (javaMethods.size() == 1) {
                 java.lang.reflect.Method javaMethod = javaMethods.get(0);
                 String painlessMethodKey = buildPainlessMethodKey(javaMethod.getName(), javaMethod.getParameterCount());
 
-                List<Class<?>> superInterfaces = new ArrayList<>();
+                Deque<Class<?>> superInterfaces = new ArrayDeque<>();
                 Set<Class<?>> resolvedInterfaces = new HashSet<>();
 
-                superInterfaces.add(targetClass);
+                superInterfaces.addLast(targetClass);
 
-                while (superInterfaces.isEmpty() == false) {
-                    Class<?> superInterface = superInterfaces.remove(0);
+                Class<?> superInterface;
+                while ((superInterface = superInterfaces.pollFirst()) != null) {
 
                     if (resolvedInterfaces.add(superInterface)) {
                         PainlessClassBuilder functionalInterfacePainlessClassBuilder = classesToPainlessClassBuilders.get(superInterface);
@@ -2183,7 +1817,9 @@ public final class PainlessLookupBuilder {
      * run-time resulting from calls with a def type value target.
      */
     private void generateRuntimeMethods() {
-        for (PainlessClassBuilder painlessClassBuilder : classesToPainlessClassBuilders.values()) {
+        for (Map.Entry<Class<?>, PainlessClassBuilder> painlessClassBuilderEntry : classesToPainlessClassBuilders.entrySet()) {
+            Class<?> targetClass = painlessClassBuilderEntry.getKey();
+            PainlessClassBuilder painlessClassBuilder = painlessClassBuilderEntry.getValue();
             painlessClassBuilder.runtimeMethods.putAll(painlessClassBuilder.methods);
 
             for (PainlessMethod painlessMethod : painlessClassBuilder.runtimeMethods.values()) {
@@ -2195,63 +1831,25 @@ public final class PainlessLookupBuilder {
                         || typeParameter == Long.class
                         || typeParameter == Float.class
                         || typeParameter == Double.class) {
-                        generateBridgeMethod(painlessClassBuilder, painlessMethod);
+                        generateFilteredMethod(targetClass, painlessClassBuilder, painlessMethod);
                     }
                 }
             }
         }
     }
 
-    private void generateBridgeMethod(PainlessClassBuilder painlessClassBuilder, PainlessMethod painlessMethod) {
+    private void generateFilteredMethod(Class<?> targetClass, PainlessClassBuilder painlessClassBuilder, PainlessMethod painlessMethod) {
         String painlessMethodKey = buildPainlessMethodKey(painlessMethod.javaMethod().getName(), painlessMethod.typeParameters().size());
-        PainlessMethod bridgePainlessMethod = painlessBridgeCache.get(painlessMethod);
+        PainlessMethod filteredPainlessMethod = painlessFilteredCache.get(painlessMethod);
 
-        if (bridgePainlessMethod == null) {
+        if (filteredPainlessMethod == null) {
             Method javaMethod = painlessMethod.javaMethod();
             boolean isStatic = Modifier.isStatic(painlessMethod.javaMethod().getModifiers());
-
-            int bridgeClassFrames = ClassWriter.COMPUTE_FRAMES | ClassWriter.COMPUTE_MAXS;
-            int bridgeClassAccess = Opcodes.ACC_PUBLIC | Opcodes.ACC_SUPER | Opcodes.ACC_FINAL;
-            String bridgeClassName = "org/elasticsearch/painless/Bridge$"
-                + javaMethod.getDeclaringClass().getSimpleName()
-                + "$"
-                + javaMethod.getName();
-            ClassWriter bridgeClassWriter = new ClassWriter(bridgeClassFrames);
-            bridgeClassWriter.visit(
-                WriterConstants.CLASS_VERSION,
-                bridgeClassAccess,
-                bridgeClassName,
-                null,
-                OBJECT_TYPE.getInternalName(),
-                null
-            );
-
-            org.objectweb.asm.commons.Method bridgeConstructorType = new org.objectweb.asm.commons.Method(
-                "<init>",
-                MethodType.methodType(void.class).toMethodDescriptorString()
-            );
-            GeneratorAdapter bridgeConstructorWriter = new GeneratorAdapter(
-                Opcodes.ASM5,
-                bridgeConstructorType,
-                bridgeClassWriter.visitMethod(
-                    Opcodes.ACC_PRIVATE,
-                    bridgeConstructorType.getName(),
-                    bridgeConstructorType.getDescriptor(),
-                    null,
-                    null
-                )
-            );
-            bridgeConstructorWriter.visitCode();
-            bridgeConstructorWriter.loadThis();
-            bridgeConstructorWriter.invokeConstructor(OBJECT_TYPE, bridgeConstructorType);
-            bridgeConstructorWriter.returnValue();
-            bridgeConstructorWriter.endMethod();
-
-            int bridgeTypeParameterOffset = isStatic ? 0 : 1;
-            List<Class<?>> bridgeTypeParameters = new ArrayList<>(javaMethod.getParameterTypes().length + bridgeTypeParameterOffset);
+            int filteredTypeParameterOffset = isStatic ? 0 : 1;
+            List<Class<?>> filteredTypeParameters = new ArrayList<>(javaMethod.getParameterCount() + filteredTypeParameterOffset);
 
             if (isStatic == false) {
-                bridgeTypeParameters.add(javaMethod.getDeclaringClass());
+                filteredTypeParameters.add(javaMethod.getDeclaringClass());
             }
 
             for (Class<?> typeParameter : javaMethod.getParameterTypes()) {
@@ -2262,85 +1860,54 @@ public final class PainlessLookupBuilder {
                     || typeParameter == Long.class
                     || typeParameter == Float.class
                     || typeParameter == Double.class) {
-                    bridgeTypeParameters.add(Object.class);
+                    filteredTypeParameters.add(Object.class);
                 } else {
-                    bridgeTypeParameters.add(typeParameter);
+                    filteredTypeParameters.add(typeParameter);
                 }
             }
 
-            MethodType bridgeMethodType = MethodType.methodType(painlessMethod.returnType(), bridgeTypeParameters);
-            MethodWriter bridgeMethodWriter = new MethodWriter(
-                Opcodes.ACC_PUBLIC | Opcodes.ACC_STATIC,
-                new org.objectweb.asm.commons.Method(painlessMethod.javaMethod().getName(), bridgeMethodType.toMethodDescriptorString()),
-                bridgeClassWriter,
-                null,
-                null
-            );
-            bridgeMethodWriter.visitCode();
-
-            if (isStatic == false) {
-                bridgeMethodWriter.loadArg(0);
-            }
-
-            for (int typeParameterCount = 0; typeParameterCount < javaMethod.getParameterTypes().length; ++typeParameterCount) {
-                bridgeMethodWriter.loadArg(typeParameterCount + bridgeTypeParameterOffset);
-                Class<?> typeParameter = javaMethod.getParameterTypes()[typeParameterCount];
-
-                if (typeParameter == Byte.class) bridgeMethodWriter.invokeStatic(DEF_UTIL_TYPE, DEF_TO_B_BYTE_IMPLICIT);
-                else if (typeParameter == Short.class) bridgeMethodWriter.invokeStatic(DEF_UTIL_TYPE, DEF_TO_B_SHORT_IMPLICIT);
-                else if (typeParameter == Character.class) bridgeMethodWriter.invokeStatic(DEF_UTIL_TYPE, DEF_TO_B_CHARACTER_IMPLICIT);
-                else if (typeParameter == Integer.class) bridgeMethodWriter.invokeStatic(DEF_UTIL_TYPE, DEF_TO_B_INTEGER_IMPLICIT);
-                else if (typeParameter == Long.class) bridgeMethodWriter.invokeStatic(DEF_UTIL_TYPE, DEF_TO_B_LONG_IMPLICIT);
-                else if (typeParameter == Float.class) bridgeMethodWriter.invokeStatic(DEF_UTIL_TYPE, DEF_TO_B_FLOAT_IMPLICIT);
-                else if (typeParameter == Double.class) bridgeMethodWriter.invokeStatic(DEF_UTIL_TYPE, DEF_TO_B_DOUBLE_IMPLICIT);
-            }
-
-            bridgeMethodWriter.invokeMethodCall(painlessMethod);
-            bridgeMethodWriter.returnValue();
-            bridgeMethodWriter.endMethod();
-
-            bridgeClassWriter.visitEnd();
+            MethodType filteredMethodType = MethodType.methodType(painlessMethod.returnType(), filteredTypeParameters);
+            MethodHandle filteredMethodHandle = painlessMethod.methodHandle();
 
             try {
-                BridgeLoader bridgeLoader = AccessController.doPrivileged(new PrivilegedAction<BridgeLoader>() {
-                    @Override
-                    public BridgeLoader run() {
-                        return new BridgeLoader(javaMethod.getDeclaringClass().getClassLoader());
-                    }
-                });
+                Class<?>[] methodParameters = javaMethod.getParameterTypes();
+                for (int typeParameterCount = 0; typeParameterCount < methodParameters.length; ++typeParameterCount) {
+                    Class<?> typeParameter = methodParameters[typeParameterCount];
+                    MethodHandle castMethodHandle = Def.DEF_TO_BOXED_TYPE_IMPLICIT_CAST.get(typeParameter);
 
-                Class<?> bridgeClass = bridgeLoader.defineBridge(bridgeClassName.replace('/', '.'), bridgeClassWriter.toByteArray());
-                Method bridgeMethod = bridgeClass.getMethod(
-                    painlessMethod.javaMethod().getName(),
-                    bridgeTypeParameters.toArray(new Class<?>[0])
-                );
-                MethodHandle bridgeHandle = MethodHandles.publicLookup().in(bridgeClass).unreflect(bridgeClass.getMethods()[0]);
-                bridgePainlessMethod = new PainlessMethod(
-                    bridgeMethod,
-                    bridgeClass,
+                    if (castMethodHandle != null) {
+                        filteredMethodHandle = MethodHandles.filterArguments(
+                            filteredMethodHandle,
+                            typeParameterCount + filteredTypeParameterOffset,
+                            castMethodHandle
+                        );
+                    }
+                }
+
+                filteredPainlessMethod = new PainlessMethod(
+                    painlessMethod.javaMethod(),
+                    targetClass,
                     painlessMethod.returnType(),
-                    bridgeTypeParameters,
-                    bridgeHandle,
-                    bridgeMethodType,
-                    Collections.emptyMap()
+                    filteredTypeParameters,
+                    filteredMethodHandle,
+                    filteredMethodType,
+                    Map.of()
                 );
-                painlessClassBuilder.runtimeMethods.put(painlessMethodKey.intern(), bridgePainlessMethod);
-                painlessBridgeCache.put(painlessMethod, bridgePainlessMethod);
+                painlessClassBuilder.runtimeMethods.put(painlessMethodKey.intern(), filteredPainlessMethod);
+                painlessFilteredCache.put(painlessMethod, filteredPainlessMethod);
             } catch (Exception exception) {
                 throw new IllegalStateException(
-                    "internal error occurred attempting to generate a bridge method [" + bridgeClassName + "]",
+                    "internal error occurred attempting to generate a runtime method [" + painlessMethodKey + "]",
                     exception
                 );
             }
         } else {
-            painlessClassBuilder.runtimeMethods.put(painlessMethodKey.intern(), bridgePainlessMethod);
+            painlessClassBuilder.runtimeMethods.put(painlessMethodKey.intern(), filteredPainlessMethod);
         }
     }
 
     private void cacheRuntimeHandles() {
-        for (PainlessClassBuilder painlessClassBuilder : classesToPainlessClassBuilders.values()) {
-            cacheRuntimeHandles(painlessClassBuilder);
-        }
+        classesToPainlessClassBuilders.values().forEach(this::cacheRuntimeHandles);
     }
 
     private void cacheRuntimeHandles(PainlessClassBuilder painlessClassBuilder) {
