@@ -15,15 +15,22 @@ import org.elasticsearch.action.admin.indices.resolve.ResolveIndexAction.Resolve
 import org.elasticsearch.action.admin.indices.resolve.ResolveIndexAction.ResolvedIndex;
 import org.elasticsearch.action.admin.indices.resolve.ResolveIndexAction.TransportAction;
 import org.elasticsearch.action.support.IndicesOptions;
+import org.elasticsearch.cluster.ClusterName;
+import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.metadata.AliasMetadata;
 import org.elasticsearch.cluster.metadata.DataStream;
 import org.elasticsearch.cluster.metadata.DataStreamTestHelper;
-import org.elasticsearch.cluster.metadata.IndexAbstractionResolver;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.time.DateFormatter;
+import org.elasticsearch.common.util.concurrent.ThreadContext;
+import org.elasticsearch.index.IndexNotFoundException;
+import org.elasticsearch.indices.EmptySystemIndices;
+import org.elasticsearch.indices.SystemIndexDescriptor;
+import org.elasticsearch.indices.SystemIndices;
 import org.elasticsearch.indices.TestIndexNameExpressionResolver;
 import org.elasticsearch.test.ESTestCase;
 import org.junit.Before;
@@ -40,31 +47,39 @@ import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.createTimestampField;
+import static org.elasticsearch.indices.SystemIndices.EXTERNAL_SYSTEM_INDEX_ACCESS_CONTROL_HEADER_KEY;
+import static org.elasticsearch.indices.SystemIndices.SYSTEM_INDEX_ACCESS_CONTROL_HEADER_KEY;
 import static org.hamcrest.Matchers.arrayContaining;
+import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.oneOf;
 import static org.hamcrest.core.IsNull.notNullValue;
 
 public class ResolveIndexTests extends ESTestCase {
 
     private final Object[][] indices = new Object[][] {
-        // name, isClosed, isHidden, isFrozen, dataStream, aliases
-        { "logs-pgsql-prod-20200101", false, false, true, null, new String[] { "logs-pgsql-prod" } },
-        { "logs-pgsql-prod-20200102", false, false, true, null, new String[] { "logs-pgsql-prod", "one-off-alias" } },
-        { "logs-pgsql-prod-20200103", false, false, false, null, new String[] { "logs-pgsql-prod" } },
-        { "logs-pgsql-test-20200101", true, false, false, null, new String[] { "logs-pgsql-test" } },
-        { "logs-pgsql-test-20200102", false, false, false, null, new String[] { "logs-pgsql-test" } },
-        { "logs-pgsql-test-20200103", false, false, false, null, new String[] { "logs-pgsql-test" } } };
+        // name, isClosed, isHidden, isSystem, isFrozen, dataStream, aliases
+        { "logs-pgsql-prod-20200101", false, false, false, true, null, new String[] { "logs-pgsql-prod" } },
+        { "logs-pgsql-prod-20200102", false, false, false, true, null, new String[] { "logs-pgsql-prod", "one-off-alias" } },
+        { "logs-pgsql-prod-20200103", false, false, false, false, null, new String[] { "logs-pgsql-prod" } },
+        { "logs-pgsql-test-20200101", true, false, false, false, null, new String[] { "logs-pgsql-test" } },
+        { "logs-pgsql-test-20200102", false, false, false, false, null, new String[] { "logs-pgsql-test" } },
+        { "logs-pgsql-test-20200103", false, false, false, false, null, new String[] { "logs-pgsql-test" } },
+        { ".test-system-index", false, false, true, false, null, new String[] {} } };
 
     private final Object[][] dataStreams = new Object[][] {
-        // name, timestampField, numBackingIndices
-        { "logs-mysql-prod", "@timestamp", 4 },
-        { "logs-mysql-test", "@timestamp", 2 } };
+        // name, numBackingIndices
+        { "logs-mysql-prod", 4 },
+        { "logs-mysql-test", 2 } };
 
-    private Metadata metadata;
-    private final IndexAbstractionResolver resolver = new IndexAbstractionResolver(TestIndexNameExpressionResolver.newInstance());
+    private ClusterState clusterState;
+    private ThreadContext threadContext;
+
+    private IndexNameExpressionResolver resolver = TestIndexNameExpressionResolver.newInstance();
 
     private long epochMillis;
     private String dateString;
@@ -72,8 +87,10 @@ public class ResolveIndexTests extends ESTestCase {
     @Before
     public void setup() {
         epochMillis = randomLongBetween(1580536800000L, 1583042400000L);
+        threadContext = createThreadContext();
+        resolver = new IndexNameExpressionResolver(threadContext, EmptySystemIndices.INSTANCE);
         dateString = DataStream.DATE_FORMATTER.formatMillis(epochMillis);
-        metadata = buildMetadata(dataStreams, indices);
+        clusterState = ClusterState.builder(new ClusterName("_name")).metadata(buildMetadata(dataStreams, indices)).build();
     }
 
     public void testResolveStarWithDefaultOptions() {
@@ -83,10 +100,11 @@ public class ResolveIndexTests extends ESTestCase {
         List<ResolvedAlias> aliases = new ArrayList<>();
         List<ResolvedDataStream> dataStreams = new ArrayList<>();
 
-        TransportAction.resolveIndices(names, indicesOptions, metadata, resolver, indices, aliases, dataStreams, true);
+        TransportAction.resolveIndices(names, indicesOptions, clusterState, resolver, indices, aliases, dataStreams);
 
         validateIndices(
             indices,
+            ".test-system-index",
             "logs-pgsql-prod-20200101",
             "logs-pgsql-prod-20200102",
             "logs-pgsql-prod-20200103",
@@ -100,13 +118,16 @@ public class ResolveIndexTests extends ESTestCase {
     }
 
     public void testResolveStarWithAllOptions() {
-        String[] names = new String[] { "*" };
-        IndicesOptions indicesOptions = IndicesOptions.LENIENT_EXPAND_OPEN_CLOSED_HIDDEN;
+        String[] names = randomFrom(new String[] { "*" }, new String[] { "_all" });
+        IndicesOptions indicesOptions = randomFrom(
+            IndicesOptions.LENIENT_EXPAND_OPEN_CLOSED_HIDDEN,
+            IndicesOptions.STRICT_EXPAND_OPEN_CLOSED_HIDDEN
+        );
         List<ResolvedIndex> indices = new ArrayList<>();
         List<ResolvedAlias> aliases = new ArrayList<>();
         List<ResolvedDataStream> dataStreams = new ArrayList<>();
 
-        TransportAction.resolveIndices(names, indicesOptions, metadata, resolver, indices, aliases, dataStreams, true);
+        TransportAction.resolveIndices(names, indicesOptions, clusterState, resolver, indices, aliases, dataStreams);
         validateIndices(
             indices,
             ".ds-logs-mysql-prod-" + dateString + "-000001",
@@ -115,6 +136,7 @@ public class ResolveIndexTests extends ESTestCase {
             ".ds-logs-mysql-prod-" + dateString + "-000004",
             ".ds-logs-mysql-test-" + dateString + "-000001",
             ".ds-logs-mysql-test-" + dateString + "-000002",
+            ".test-system-index",
             "logs-pgsql-prod-20200101",
             "logs-pgsql-prod-20200102",
             "logs-pgsql-prod-20200103",
@@ -135,7 +157,7 @@ public class ResolveIndexTests extends ESTestCase {
         List<ResolvedAlias> aliases = new ArrayList<>();
         List<ResolvedDataStream> dataStreams = new ArrayList<>();
 
-        TransportAction.resolveIndices(names, indicesOptions, metadata, resolver, indices, aliases, dataStreams, true);
+        TransportAction.resolveIndices(names, indicesOptions, clusterState, resolver, indices, aliases, dataStreams);
 
         validateIndices(
             indices,
@@ -162,7 +184,7 @@ public class ResolveIndexTests extends ESTestCase {
         List<ResolvedAlias> aliases = new ArrayList<>();
         List<ResolvedDataStream> dataStreams = new ArrayList<>();
 
-        TransportAction.resolveIndices(names, indicesOptions, metadata, resolver, indices, aliases, dataStreams, true);
+        TransportAction.resolveIndices(names, indicesOptions, clusterState, resolver, indices, aliases, dataStreams);
         validateIndices(indices, ".ds-logs-mysql-prod-" + dateString + "-000003", "logs-pgsql-test-20200102");
         validateAliases(aliases, "one-off-alias");
         validateDataStreams(dataStreams, "logs-mysql-test");
@@ -172,32 +194,20 @@ public class ResolveIndexTests extends ESTestCase {
         Metadata.Builder builder = Metadata.builder();
         String dataStreamName = "my-data-stream";
         String[] names = { "not-in-order-2", "not-in-order-1", DataStream.getDefaultBackingIndexName(dataStreamName, 3, epochMillis) };
-        List<IndexMetadata> backingIndices = Arrays.stream(names).map(n -> createIndexMetadata(n, true)).collect(Collectors.toList());
+        List<IndexMetadata> backingIndices = Arrays.stream(names).map(n -> createIndexMetadata(n, true)).toList();
         for (IndexMetadata index : backingIndices) {
             builder.put(index, false);
         }
 
-        DataStream ds = DataStreamTestHelper.newInstance(
-            dataStreamName,
-            createTimestampField("@timestamp"),
-            backingIndices.stream().map(IndexMetadata::getIndex).collect(Collectors.toList())
-        );
+        DataStream ds = DataStreamTestHelper.newInstance(dataStreamName, backingIndices.stream().map(IndexMetadata::getIndex).toList());
         builder.put(ds);
+        ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).metadata(builder.build()).build();
 
         IndicesOptions indicesOptions = IndicesOptions.LENIENT_EXPAND_OPEN_CLOSED_HIDDEN;
         List<ResolvedIndex> indices = new ArrayList<>();
         List<ResolvedAlias> aliases = new ArrayList<>();
         List<ResolvedDataStream> dataStreams = new ArrayList<>();
-        TransportAction.resolveIndices(
-            new String[] { "*" },
-            indicesOptions,
-            builder.build(),
-            resolver,
-            indices,
-            aliases,
-            dataStreams,
-            true
-        );
+        TransportAction.resolveIndices(new String[] { "*" }, indicesOptions, clusterState, resolver, indices, aliases, dataStreams);
 
         assertThat(dataStreams.size(), equalTo(1));
         assertThat(dataStreams.get(0).getBackingIndices(), arrayContaining(names));
@@ -211,21 +221,100 @@ public class ResolveIndexTests extends ESTestCase {
         String tomorrowSuffix = dateFormatter.format(now.plus(Duration.ofDays(1L)));
         Object[][] indices = new Object[][] {
             // name, isClosed, isHidden, isFrozen, dataStream, aliases
-            { "logs-pgsql-prod-" + todaySuffix, false, true, false, null, Strings.EMPTY_ARRAY },
-            { "logs-pgsql-prod-" + tomorrowSuffix, false, true, false, null, Strings.EMPTY_ARRAY } };
-        Metadata metadata = buildMetadata(new Object[][] {}, indices);
-
-        String requestedIndex = "<logs-pgsql-prod-{now/d}>";
-        List<String> resolvedIndices = resolver.resolveIndexAbstractions(
-            List.of(requestedIndex),
-            IndicesOptions.LENIENT_EXPAND_OPEN,
-            metadata,
-            List.of("logs-pgsql-prod-" + todaySuffix, "logs-pgsql-prod-" + tomorrowSuffix),
-            randomBoolean(),
-            randomBoolean()
-        );
+            { "logs-pgsql-prod-" + todaySuffix, false, true, false, false, null, Strings.EMPTY_ARRAY },
+            { "logs-pgsql-prod-" + tomorrowSuffix, false, true, false, false, null, Strings.EMPTY_ARRAY } };
+        ClusterState clusterState = ClusterState.builder(new ClusterName("_name"))
+            .metadata(buildMetadata(new Object[][] {}, indices))
+            .build();
+        String[] requestedIndex = new String[] { "<logs-pgsql-prod-{now/d}>" };
+        Set<String> resolvedIndices = resolver.resolveExpressions(clusterState, IndicesOptions.LENIENT_EXPAND_OPEN, true, requestedIndex);
         assertThat(resolvedIndices.size(), is(1));
-        assertThat(resolvedIndices.get(0), oneOf("logs-pgsql-prod-" + todaySuffix, "logs-pgsql-prod-" + tomorrowSuffix));
+        assertThat(resolvedIndices, contains(oneOf("logs-pgsql-prod-" + todaySuffix, "logs-pgsql-prod-" + tomorrowSuffix)));
+    }
+
+    public void testSystemIndexAccess() {
+        Metadata.Builder mdBuilder = buildMetadata(dataStreams, indices);
+        SystemIndices systemIndices = addSystemIndex(mdBuilder);
+        clusterState = ClusterState.builder(new ClusterName("_name")).metadata(mdBuilder).build();
+        {
+            threadContext = createThreadContext();
+            if (randomBoolean()) {
+                threadContext.putHeader(SYSTEM_INDEX_ACCESS_CONTROL_HEADER_KEY, "false");
+            }
+            threadContext.putHeader(EXTERNAL_SYSTEM_INDEX_ACCESS_CONTROL_HEADER_KEY, "whatever");
+            resolver = new IndexNameExpressionResolver(threadContext, systemIndices);
+            List<ResolvedIndex> indices = new ArrayList<>();
+            List<ResolvedAlias> aliases = new ArrayList<>();
+            List<ResolvedDataStream> dataStreams = new ArrayList<>();
+            TransportAction.resolveIndices(
+                new String[] { ".*" },
+                IndicesOptions.LENIENT_EXPAND_OPEN,
+                clusterState,
+                resolver,
+                indices,
+                aliases,
+                dataStreams
+            );
+            // non net-new system indices are allowed even when no system indices are allowed
+            assertThat(indices.stream().map(ResolvedIndex::getName).collect(Collectors.toList()), hasItem(is(".test-system-1")));
+        }
+        {
+            threadContext = createThreadContext();
+            threadContext.putHeader(EXTERNAL_SYSTEM_INDEX_ACCESS_CONTROL_HEADER_KEY, "test-net-new-system");
+            resolver = new IndexNameExpressionResolver(threadContext, systemIndices);
+            List<ResolvedIndex> indices = new ArrayList<>();
+            List<ResolvedAlias> aliases = new ArrayList<>();
+            List<ResolvedDataStream> dataStreams = new ArrayList<>();
+            TransportAction.resolveIndices(
+                new String[] { ".*" },
+                IndicesOptions.STRICT_EXPAND_OPEN,
+                clusterState,
+                resolver,
+                indices,
+                aliases,
+                dataStreams
+            );
+            assertThat(indices.stream().map(ResolvedIndex::getName).collect(Collectors.toList()), hasItem(is(".test-system-1")));
+            assertThat(indices.stream().map(ResolvedIndex::getName).collect(Collectors.toList()), hasItem(is(".test-net-new-system-1")));
+            indices = new ArrayList<>();
+            TransportAction.resolveIndices(
+                new String[] { ".test-net*" },
+                IndicesOptions.STRICT_EXPAND_OPEN,
+                clusterState,
+                resolver,
+                indices,
+                aliases,
+                dataStreams
+            );
+            assertThat(indices.stream().map(ResolvedIndex::getName).collect(Collectors.toList()), not(hasItem(is(".test-system-1"))));
+            assertThat(indices.stream().map(ResolvedIndex::getName).collect(Collectors.toList()), hasItem(is(".test-net-new-system-1")));
+        }
+    }
+
+    public void testIgnoreUnavailableFalse() {
+        String[] names = new String[] { "missing", "logs*" };
+        IndicesOptions indicesOptions = IndicesOptions.STRICT_EXPAND_OPEN;
+        List<ResolvedIndex> indices = new ArrayList<>();
+        List<ResolvedAlias> aliases = new ArrayList<>();
+        List<ResolvedDataStream> dataStreams = new ArrayList<>();
+        IndexNotFoundException infe = expectThrows(
+            IndexNotFoundException.class,
+            () -> TransportAction.resolveIndices(names, indicesOptions, clusterState, resolver, indices, aliases, dataStreams)
+        );
+        assertThat(infe.getMessage(), containsString("no such index [missing]"));
+    }
+
+    public void testAllowNoIndicesFalse() {
+        String[] names = new String[] { "missing", "missing*" };
+        IndicesOptions indicesOptions = IndicesOptions.fromOptions(true, false, true, true);
+        List<ResolvedIndex> indices = new ArrayList<>();
+        List<ResolvedAlias> aliases = new ArrayList<>();
+        List<ResolvedDataStream> dataStreams = new ArrayList<>();
+        IndexNotFoundException infe = expectThrows(
+            IndexNotFoundException.class,
+            () -> TransportAction.resolveIndices(names, indicesOptions, clusterState, resolver, indices, aliases, dataStreams)
+        );
+        assertThat(infe.getMessage(), containsString("no such index [missing*]"));
     }
 
     private void validateIndices(List<ResolvedIndex> resolvedIndices, String... expectedIndices) {
@@ -238,9 +327,9 @@ public class ResolveIndexTests extends ESTestCase {
             }
             assertThat(indexInfo, notNullValue());
             assertThat(resolvedIndex.getName(), equalTo((String) indexInfo[0]));
-            assertThat(resolvedIndex.getAliases(), is(((String[]) indexInfo[5])));
+            assertThat(resolvedIndex.getAliases(), is(((String[]) indexInfo[6])));
             assertThat(resolvedIndex.getAttributes(), is(flagsToAttributes(indexInfo)));
-            assertThat(resolvedIndex.getDataStream(), equalTo((String) indexInfo[4]));
+            assertThat(resolvedIndex.getDataStream(), equalTo((String) indexInfo[5]));
         }
     }
 
@@ -249,7 +338,7 @@ public class ResolveIndexTests extends ESTestCase {
 
         Map<String, Set<String>> aliasToIndicesMap = new HashMap<>();
         for (Object[] indexInfo : indices) {
-            String[] aliases = (String[]) indexInfo[5];
+            String[] aliases = (String[]) indexInfo[6];
             for (String alias : aliases) {
                 Set<String> indicesSet = aliasToIndicesMap.get(alias);
                 if (indicesSet == null) {
@@ -277,8 +366,8 @@ public class ResolveIndexTests extends ESTestCase {
             Object[] dataStreamInfo = findInfo(dataStreams, expectedDataStreams[k]);
             assertThat(dataStreamInfo, notNullValue());
             assertThat(resolvedDataStream.getName(), equalTo((String) dataStreamInfo[0]));
-            assertThat(resolvedDataStream.getTimestampField(), equalTo((String) dataStreamInfo[1]));
-            int numBackingIndices = (int) dataStreamInfo[2];
+            assertThat(resolvedDataStream.getTimestampField(), equalTo("@timestamp"));
+            int numBackingIndices = (int) dataStreamInfo[1];
             List<String> expectedBackingIndices = new ArrayList<>();
             for (int m = 1; m <= numBackingIndices; m++) {
                 expectedBackingIndices.add(DataStream.getDefaultBackingIndexName(resolvedDataStream.getName(), m, epochMillis));
@@ -287,14 +376,13 @@ public class ResolveIndexTests extends ESTestCase {
         }
     }
 
-    Metadata buildMetadata(Object[][] dataStreams, Object[][] indices) {
+    Metadata.Builder buildMetadata(Object[][] dataStreams, Object[][] indices) {
         Metadata.Builder builder = Metadata.builder();
 
         List<IndexMetadata> allIndices = new ArrayList<>();
         for (Object[] dsInfo : dataStreams) {
             String dataStreamName = (String) dsInfo[0];
-            String timestampField = (String) dsInfo[1];
-            int numBackingIndices = (int) dsInfo[2];
+            int numBackingIndices = (int) dsInfo[1];
             List<IndexMetadata> backingIndices = new ArrayList<>();
             for (int backingIndexNumber = 1; backingIndexNumber <= numBackingIndices; backingIndexNumber++) {
                 backingIndices.add(
@@ -303,31 +391,35 @@ public class ResolveIndexTests extends ESTestCase {
             }
             allIndices.addAll(backingIndices);
 
-            DataStream ds = DataStreamTestHelper.newInstance(
-                dataStreamName,
-                createTimestampField(timestampField),
-                backingIndices.stream().map(IndexMetadata::getIndex).collect(Collectors.toList())
-            );
+            DataStream ds = DataStreamTestHelper.newInstance(dataStreamName, backingIndices.stream().map(IndexMetadata::getIndex).toList());
             builder.put(ds);
         }
 
         for (Object[] indexInfo : indices) {
             String indexName = (String) indexInfo[0];
-            String[] aliases = (String[]) indexInfo[5];
+            String[] aliases = (String[]) indexInfo[6];
             boolean closed = (boolean) indexInfo[1];
             boolean hidden = (boolean) indexInfo[2];
-            boolean frozen = (boolean) indexInfo[3];
-            allIndices.add(createIndexMetadata(indexName, aliases, closed, hidden, frozen));
+            boolean system = (boolean) indexInfo[3];
+            boolean frozen = (boolean) indexInfo[4];
+            allIndices.add(createIndexMetadata(indexName, aliases, closed, hidden, system, frozen));
         }
 
         for (IndexMetadata index : allIndices) {
             builder.put(index, false);
         }
 
-        return builder.build();
+        return builder;
     }
 
-    private static IndexMetadata createIndexMetadata(String name, String[] aliases, boolean closed, boolean hidden, boolean frozen) {
+    private static IndexMetadata createIndexMetadata(
+        String name,
+        String[] aliases,
+        boolean closed,
+        boolean hidden,
+        boolean system,
+        boolean frozen
+    ) {
         Settings.Builder settingsBuilder = Settings.builder()
             .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
             .put("index.hidden", hidden)
@@ -336,6 +428,7 @@ public class ResolveIndexTests extends ESTestCase {
         IndexMetadata.Builder indexBuilder = IndexMetadata.builder(name)
             .settings(settingsBuilder)
             .state(closed ? IndexMetadata.State.CLOSE : IndexMetadata.State.OPEN)
+            .system(system)
             .numberOfShards(1)
             .numberOfReplicas(1);
 
@@ -347,7 +440,7 @@ public class ResolveIndexTests extends ESTestCase {
     }
 
     private static IndexMetadata createIndexMetadata(String name, boolean hidden) {
-        return createIndexMetadata(name, Strings.EMPTY_ARRAY, false, true, false);
+        return createIndexMetadata(name, Strings.EMPTY_ARRAY, false, true, false, false);
     }
 
     private static Object[] findInfo(Object[][] indexSource, String indexName) {
@@ -362,13 +455,14 @@ public class ResolveIndexTests extends ESTestCase {
     private Object[] findBackingIndexInfo(Object[][] dataStreamSource, String indexName) {
         for (Object[] info : dataStreamSource) {
             String dataStreamName = (String) info[0];
-            int generations = (int) info[2];
+            int generations = (int) info[1];
             for (int k = 1; k <= generations; k++) {
                 if (DataStream.getDefaultBackingIndexName(dataStreamName, k, epochMillis).equals(indexName)) {
                     return new Object[] {
                         DataStream.getDefaultBackingIndexName(dataStreamName, k, epochMillis),
                         false,
                         true,
+                        false,
                         false,
                         dataStreamName,
                         Strings.EMPTY_ARRAY };
@@ -385,9 +479,56 @@ public class ResolveIndexTests extends ESTestCase {
             attributes.add("hidden");
         }
         if ((boolean) indexInfo[3]) {
+            attributes.add("system");
+        }
+        if ((boolean) indexInfo[4]) {
             attributes.add("frozen");
         }
         attributes.sort(String::compareTo);
         return attributes.toArray(Strings.EMPTY_ARRAY);
+    }
+
+    private SystemIndices addSystemIndex(Metadata.Builder mdBuilder) {
+        mdBuilder.put(indexBuilder(".test-system-1", SystemIndexDescriptor.DEFAULT_SETTINGS).state(IndexMetadata.State.OPEN).system(true))
+            .put(
+                indexBuilder(".test-net-new-system-1", SystemIndexDescriptor.DEFAULT_SETTINGS).state(IndexMetadata.State.OPEN).system(true)
+            );
+        SystemIndices systemIndices = new SystemIndices(
+            List.of(
+                new SystemIndices.Feature(
+                    "test-system-feature",
+                    "test system index",
+                    List.of(
+                        new SystemIndexDescriptor(
+                            ".test-system*",
+                            "test-system-description",
+                            SystemIndexDescriptor.Type.EXTERNAL_UNMANAGED,
+                            List.of("test-system")
+                        ),
+                        SystemIndexDescriptor.builder()
+                            .setIndexPattern(".test-net-new-system*")
+                            .setDescription("test-net-new-system-description")
+                            .setType(SystemIndexDescriptor.Type.EXTERNAL_MANAGED)
+                            .setAllowedElasticProductOrigins(List.of("test-net-new-system"))
+                            .setNetNew()
+                            .setSettings(Settings.EMPTY)
+                            .setMappings("{ \"_doc\": { \"_meta\": { \"version\": \"8.0.0\" } } }")
+                            .setPrimaryIndex(".test-net-new-system-1")
+                            .setVersionMetaKey("version")
+                            .setOrigin("system")
+                            .build()
+                    )
+                )
+            )
+        );
+        return systemIndices;
+    }
+
+    private static IndexMetadata.Builder indexBuilder(String index, Settings additionalSettings) {
+        return IndexMetadata.builder(index).settings(indexSettings(Version.CURRENT, 1, 0).put(additionalSettings));
+    }
+
+    private ThreadContext createThreadContext() {
+        return new ThreadContext(Settings.EMPTY);
     }
 }
