@@ -7,7 +7,6 @@
  */
 package org.elasticsearch.cluster.coordination;
 
-import org.elasticsearch.Assertions;
 import org.elasticsearch.Version;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
@@ -17,16 +16,17 @@ import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.node.DiscoveryNodeRole;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
+import org.elasticsearch.cluster.node.TestDiscoveryNode;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.transport.TransportAddress;
+import org.elasticsearch.core.Assertions;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.EqualsHashCodeTestUtils;
 import org.junit.Before;
 
 import java.util.Collections;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static java.util.Collections.emptyMap;
@@ -820,9 +820,7 @@ public class CoordinationStateTests extends ESTestCase {
         assertTrue(voteCollection.isEmpty());
 
         assertFalse(
-            voteCollection.addVote(
-                new DiscoveryNode("master-ineligible", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT)
-            )
+            voteCollection.addVote(TestDiscoveryNode.create("master-ineligible", buildNewFakeTransportAddress(), emptyMap(), emptySet()))
         );
         assertTrue(voteCollection.isEmpty());
 
@@ -855,9 +853,7 @@ public class CoordinationStateTests extends ESTestCase {
 
     public void testSafety() {
         new CoordinationStateTestCluster(
-            IntStream.range(0, randomIntBetween(1, 5))
-                .mapToObj(i -> new DiscoveryNode("node_" + i, buildNewFakeTransportAddress(), Version.CURRENT))
-                .collect(Collectors.toList()),
+            IntStream.range(0, randomIntBetween(1, 5)).mapToObj(i -> TestDiscoveryNode.create("node_" + i)).toList(),
             ElectionStrategy.DEFAULT_INSTANCE
         ).runRandomly();
     }
