@@ -8,9 +8,9 @@
 
 package org.elasticsearch.discovery;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.cluster.coordination.PeersResponse;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.node.TestDiscoveryNode;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.EqualsHashCodeTestUtils;
 import org.elasticsearch.test.EqualsHashCodeTestUtils.CopyFunction;
@@ -20,20 +20,19 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 
 public class PeerFinderMessagesTests extends ESTestCase {
     private DiscoveryNode createNode(String id) {
-        return new DiscoveryNode(id, buildNewFakeTransportAddress(), Version.CURRENT);
+        return TestDiscoveryNode.create(id);
     }
 
     public void testPeersRequestEqualsHashCodeSerialization() {
         final PeersRequest initialPeersRequest = new PeersRequest(
             createNode(randomAlphaOfLength(10)),
-            Arrays.stream(generateRandomStringArray(10, 10, false)).map(this::createNode).collect(Collectors.toList())
+            Arrays.stream(generateRandomStringArray(10, 10, false)).map(this::createNode).toList()
         );
 
         // Note: the explicit cast of the CopyFunction is needed for some IDE (specifically Eclipse 4.8.0) to infer the right type
@@ -60,7 +59,7 @@ public class PeerFinderMessagesTests extends ESTestCase {
         } else {
             initialPeersResponse = new PeersResponse(
                 Optional.empty(),
-                Arrays.stream(generateRandomStringArray(10, 10, false, false)).map(this::createNode).collect(Collectors.toList()),
+                Arrays.stream(generateRandomStringArray(10, 10, false, false)).map(this::createNode).toList(),
                 initialTerm
             );
         }
