@@ -42,7 +42,7 @@ public class ScriptLanguagesInfoTests extends ESTestCase {
     }
 
     public void testBothTypesAllowedReturnsBothTypes() {
-        List<String> types = Arrays.stream(ScriptType.values()).map(ScriptType::getName).collect(Collectors.toList());
+        List<String> types = Arrays.stream(ScriptType.values()).map(ScriptType::getName).toList();
         Settings.Builder settings = Settings.builder().putList("script.allowed_types", types);
         ScriptService ss = getMockScriptService(settings.build());
         ScriptLanguagesInfo info = ss.getScriptLanguages();
@@ -106,7 +106,7 @@ public class ScriptLanguagesInfoTests extends ESTestCase {
             .collect(Collectors.toMap(c -> c.name, Function.identity()));
 
         List<String> allContexts = new ArrayList<>(mockContexts.keySet());
-        List<String> allowed = allContexts.subList(0, allContexts.size() / 2);
+        List<String> allowed = new ArrayList<>(allContexts.subList(0, allContexts.size() / 2));
         String miscContext = "misc_context";
         allowed.add(miscContext);
         // check that allowing more than available doesn't pollute the returned contexts
